manifests/jenkins/instance.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: developer
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - jenkins
  rules:
    - host: jenkins
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-operator-http-jenkins
                port:
                  number: 8080
